// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiHeaderSectionItem border defaults to left 1`] = `
<div
  class="kuiHeaderSectionItem"
/>
`;

exports[`KuiHeaderSectionItem border renders right 1`] = `
<div
  class="kuiHeaderSectionItem kuiHeaderSectionItem--borderRight"
/>
`;

exports[`KuiHeaderSectionItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="kuiHeaderSectionItem testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
